--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -15,6 +15,7 @@
       border-radius: 30px;
       color: var(--ic-common-white);
       transition: .3s;
+      float: right;
       &:hover{
         background: var(--ic-theme-2);
       }
