I changed Template Name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 /*-----------------------------------------------------------------------------------
 
-    Theme Name: Template Name – HTML5 Template
-    Author: ThemePure
-    Support: basictheme400@gmail.com
-    Description: Template Name  – HTML5 Template
+    Theme Name: Template Name – Portfolio
+    Author: Ibrahim
+    Support: mdibrhaimislam191@gmail.com
+    Description: Template Name  – Portfolio
     Version: 1.0
 
 -----------------------------------------------------------------------------------
