--- a/assets/scss/components/_theme.scss
+++ b/assets/scss/components/_theme.scss
@@ -2,10 +2,10 @@
 
 /*-----------------------------------------------------------------------------------
 
-    Theme Name: Template Name – HTML5 Template
-    Author: ThemePure
-    Support: basictheme400@gmail.com
-    Description: Template Name  – HTML5 Template
+    Theme Name: Template Name – Portfolio
+    Author: Ibrahim
+    Support: mdibrhaimislam191@gmail.com
+    Description: Template Name  – Portfolio
     Version: 1.0
 
 -----------------------------------------------------------------------------------
